--- a/composer.json
+++ b/composer.json
@@ -29,11 +29,12 @@
         "symfony/yaml": "4.2.*"
     },
     "require-dev": {
+        "phpunit/phpunit": "^7",
         "symfony/debug-pack": "*",
         "symfony/maker-bundle": "^1.0",
         "symfony/phpunit-bridge": "4.2.*",
         "symfony/profiler-pack": "*",
-        "symfony/test-pack": "*",
+        "symfony/test-pack": "^1.0",
         "symfony/web-server-bundle": "4.2.*"
     },
     "config": {
